[package]
name = "embedded-alloc-example"
version = "0.1.0"
edition = "2021"

[dependencies]
cortex-m = { version = "0.7", features = ["critical-section-single-core"] }
cortex-m-rt = "0.7"
defmt = "0.3"
defmt-rtt = "0.4"
panic-probe = { version = "0.3", features = ["print-defmt"] }
cortex-m-semihosting = "0.5.0"
nrf52840-hal = "0.16.0"
embedded-alloc = "0.5.1"

[dependencies.linked_list_allocator]
default-features = false
version = "0.10.5"
features = ["const_mut_refs"]
