[package]
name = "heapless-example"
version = "0.1.0"
edition = "2021"

[lib]
harness = false

[dependencies]
cortex-m = { version = "0.7", features = ["critical-section-single-core"] }
cortex-m-rt = "0.7"
cortex-m-semihosting = "0.5.0"
defmt = "0.3"
defmt-rtt = "0.4"
panic-probe = { version = "0.3", features = ["print-defmt"] }
nrf52840-hal = "0.16.0"
heapless = { version = "0.8", features= ["defmt-03"] }

[dev-dependencies]
defmt-test = "0.3"

[env]
DEFMT_LOG = "debug"
