[package]
authors = ["tomoyuki nakabayashi <tomo.wait.for.it.yuki@gmail.com>"]
name = "probe-rs-example"
edition = "2021"
version = "0.1.0"

[dependencies]
cortex-m = { version = "0.7", features = ["critical-section-single-core"] }
cortex-m-rt = "0.7"
defmt = "0.3"
defmt-rtt = "0.4"
panic-probe = { version = "0.3", features = ["print-defmt"] }
cortex-m-semihosting = "0.5.0"
nrf52840-hal = "0.16.0"

[dev-dependencies]
defmt-test = "0.3"

# cargo build/run
# [profile.dev]
# codegen-units = 1
# debug = 2
# debug-assertions = true # <-
# incremental = false
# opt-level = 'z'         # <-
# overflow-checks = true  # <-

[env]
DEFMT_LOG = "debug"
